fix css alignment of user pic and name

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -16,7 +16,19 @@ section.tweet-container {
     display:flex;
      flex-direction: row;
     justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
   }
+  .user-picture-name{
+  display:flex;
+  justify-content: space-between;
+  
+}
+.fa-user{
+  padding: 5px;
+  margin: 5px;  
+}
+
   .user-handle{
 color: grey;
   }
